Update path to CSS file.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"/>
         <title>TextAnalysisTool.NET</title>
         <meta name="description" content="TextAnalysisTool.NET: A program designed to excel at viewing, searching, and navigating large files quickly and efficiently."/>
-        <link href="../tool.css" rel="stylesheet" type="text/css"/>
+        <link href="tool.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div class="center">
