--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="TextAnalysisTool.NET.gif" alt="Animated GIF showing basic TextAnalysisTool.NET functionality" width="681" height="329" style="margin-top: 1em"/>
         <h2>Download</h2>
         <p>
-            <a href="http://dlaa.me/Samples/TextAnalysisTool.NET/TextAnalysisTool.NET.zip">TextAnalysisTool.NET.zip</a> - 90 KB ZIP includes version <code>2013-05-07</code> for .NET 2+ (32- and 64-bit) and version <code>2006-12-04</code> for .NET 1.1+ (32-bit only)
+            <a href="/TextAnalysisTool/Releases/raw/master/TextAnalysisTool.zip">TextAnalysisTool.NET.zip</a> - 90 KB ZIP includes version <code>2013-05-07</code> for .NET 2+ (32- and 64-bit) and version <code>2006-12-04</code> for .NET 1.1+ (32-bit only)
         </p>
         <h2>Overview</h2>
         <div class="clear">
@@ -75,8 +75,8 @@ handle large files efficiently.</pre>
         <ul>
             <li><a href="ReadMe.txt">ReadMe.txt</a></li>
             <li><a href="TextAnalysisTool.NET.txt">TextAnalysisTool.NET.txt</a></li>
-            <li><a href="http://dlaa.me/blog/post/3450647">Introductory blog post</a></li>
-            <li><a href="http://dlaa.me/blog/tag/textanalysistool">Related content</a></li>
+            <li><a href="//dlaa.me/blog/post/3450647">Introductory blog post</a></li>
+            <li><a href="//dlaa.me/blog/tag/textanalysistool">Related content</a></li>
         </ul>
     </body>
 </html>
