Add missing domain to ZIP path.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="TextAnalysisTool.NET.gif" alt="Animated GIF showing basic TextAnalysisTool.NET functionality" width="681" height="329" style="margin-top: 1em"/>
         <h2>Download</h2>
         <p>
-            <a href="/TextAnalysisTool/Releases/raw/master/TextAnalysisTool.zip">TextAnalysisTool.NET.zip</a> - 90 KB ZIP includes version <code>2013-05-07</code> for .NET 2+ (32- and 64-bit) and version <code>2006-12-04</code> for .NET 1.1+ (32-bit only)
+            <a href="//github.com/TextAnalysisTool/Releases/raw/master/TextAnalysisTool.zip">TextAnalysisTool.NET.zip</a> - 90 KB ZIP includes version <code>2013-05-07</code> for .NET 2+ (32- and 64-bit) and version <code>2006-12-04</code> for .NET 1.1+ (32-bit only)
         </p>
         <h2>Overview</h2>
         <div class="clear">
