--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             TextAnalysisTool.NET is a free program designed to excel at viewing, searching, and navigating large files quickly and efficiently.
             TextAnalysisTool.NET provides a view of the data that you can easily manipulate (through the use of various filters) to display exactly the information you need - as you need it!
         </p>
-        <img src="TextAnalysisTool.NET.gif" alt="Animated GIF showing basic TextAnalysisTool.NET functionality" width="681" height="329" style="margin-top: 1em"/>
+        <a href="TextAnalysisTool-ScreenShot-0.png"><img src="TextAnalysisTool-ScreenShot-0.png" alt="Showing all lines with filters"/></a>
+        <a href="TextAnalysisTool-ScreenShot-1.png"><img src="TextAnalysisTool-ScreenShot-1.png" alt="Showing only filtered lines"/></a>
+        <a href="TextAnalysisTool-ScreenShot-2.png"><img src="TextAnalysisTool-ScreenShot-2.png" alt="Add Filter dialog"/></a>
+        <a href="TextAnalysisTool-ScreenShot-3.png"><img src="TextAnalysisTool-ScreenShot-3.png" alt="Find dialog"/></a>
         <h2>Download</h2>
         <p>
             <strong class="large"><a href="//github.com/TextAnalysisTool/Releases/raw/master/TextAnalysisTool.zip">TextAnalysisTool.NET.zip</a></strong>
