More updates for the 2015-01-07 release.

--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
         <a href="TextAnalysisTool-ScreenShot-3.png"><img src="TextAnalysisTool-ScreenShot-3.png" alt="Find dialog"/></a>
         <h2>Download</h2>
         <p>
-            <strong class="large"><a href="//github.com/TextAnalysisTool/Releases/raw/master/TextAnalysisTool.zip">TextAnalysisTool.NET.zip</a></strong>
+            <strong class="large"><a href="//github.com/TextAnalysisTool/Releases/raw/master/TextAnalysisTool.NET.zip">TextAnalysisTool.NET.zip</a></strong>
         </p>
         <h3>
             Includes:
         </h3>
         <ul class="notes">
-            <li>Version <code>2015-01-01</code> for .NET 4+ (32- and 64-bit)</li>
+            <li>Version <code>2015-01-07</code> for .NET 4+ (32- and 64-bit)</li>
             <li>Version <code>2013-05-07</code> for .NET 2+ (32- and 64-bit)</li>
             <li>Version <code>2006-12-04</code> for .NET 1.1+ (32-bit only)</li>
+            <li>Version <code>2001-12-28</code> for x86 (32-bit only)</li>
         </ul>
         <h2>Overview</h2>
 <p><span class="label">The Problem</span>: For those times when you have to analyze a large amount of textual
@@ -56,12 +57,12 @@ need - as you need it.</p>
 lines of that file through a set of user-defined filters, dimming or hiding all
 lines that do not satisfy any of the filters.  Filters can select only the
 lines that contain a sub-string, those that have been marked with a particular
-marker type, or those that match a regular expression.  A color can be
-associated with each filter so lines matching a particular filter stand out and
-so lines matching different filters can be easily distinguished.  In addition
-to the normal "including" filters that isolate lines of text you DO want to
-see, there are also "excluding" filters that can be used to suppress lines you
-do NOT want to see.  Excluding filters are configured just like including
+marker type, or those that match a regular expression.  Text and background
+colors can be associated with each filter so that lines matching a particular
+filter stand out and lines matching different filters can be easily distinguished.
+In addition to the normal "including" filters that isolate lines of text you DO
+want to see, there are also "excluding" filters that can be used to suppress
+lines you do NOT want to see.  Excluding filters are configured just like including
 filters but are processed afterward and remove all matching lines from the set.
 Excluding filters allow you to easily refine your search even further.</p>
 
