Add blank line to end to avoid obscuring final link in some browsers.

--- a/index.html
+++ b/index.html
@@ -96,5 +96,6 @@ handle large files efficiently.</p>
         <ul>
             <li><a href="https://github.com/TextAnalysisTool/Releases/issues">Issue tracker</a></li>
         </ul>
+        <p>&nbsp;</p>
     </body>
 </html>
