Add link to MIT license, change nbsp to #160 for easier XML validation.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li>Version <code>2006-12-04</code> for .NET 1.1+ (32-bit only)</li>
             <li>Version <code>2001-12-28</code> for x86 (32-bit only)</li>
         </ul>
+        <h3>License: <a href="http://opensource.org/licenses/MIT">MIT</a></h3>
         <h2>Overview</h2>
 <p><span class="label">The Problem</span>: For those times when you have to analyze a large amount of textual
 data, picking out the relevant line(s) of interest can be quite difficult.
@@ -96,6 +97,6 @@ handle large files efficiently.</p>
         <ul>
             <li><a href="https://github.com/TextAnalysisTool/Releases/issues">Issue tracker</a></li>
         </ul>
-        <p>&nbsp;</p>
+        <p>&#160;</p>
     </body>
 </html>
