Update for 2016-06-16 release.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <p>
                 <a href="http://dlaa.me/">David Anson</a><br/>
                 <a href="https://github.com/mike-mo">Mike Morante</a><br/>
-                <a href="https://github.com/cohen-uriel">Uriel Cohen</a>
+                <a href="https://github.com/cohen-uriel">Uriel Cohen</a><br/>
+                Vince Curley<br/>
+                Aleksey Kabanov
             </p>
         </div>
         <h2>Summary</h2>
@@ -33,7 +35,7 @@
             Includes:
         </h3>
         <ul class="notes">
-            <li>Version <code>2016-01-08</code> for .NET 4+ (32- and 64-bit)</li>
+            <li>Version <code>2016-06-16</code> for .NET 4+ (32- and 64-bit)</li>
             <li>Version <code>2013-05-07</code> for .NET 2+ (32- and 64-bit)</li>
             <li>Version <code>2006-12-04</code> for .NET 1.1+ (32-bit only)</li>
             <li>Version <code>2001-12-28</code> for x86 (32-bit only)</li>
