--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="center">
             <h1>TextAnalysisTool.NET</h1>
             <p>
-                <a href="http://dlaa.me/">David Anson</a><br/>
+                <a href="https://dlaa.me/">David Anson</a><br/>
                 <a href="https://github.com/mike-mo">Mike Morante</a><br/>
                 <a href="https://github.com/cohen-uriel">Uriel Cohen</a><br/>
                 Vince Curley<br/>
@@ -35,12 +35,12 @@
             Includes:
         </h3>
         <ul class="notes">
-            <li>Version <code>2016-06-16</code> for .NET 4+ (32- and 64-bit)</li>
+            <li>Version <code>2016-12-09</code> for .NET 4+ (32- and 64-bit)</li>
             <li>Version <code>2013-05-07</code> for .NET 2+ (32- and 64-bit)</li>
             <li>Version <code>2006-12-04</code> for .NET 1.1+ (32-bit only)</li>
             <li>Version <code>2001-12-28</code> for x86 (32-bit only)</li>
         </ul>
-        <h3>License: <a href="http://opensource.org/licenses/MIT">MIT</a></h3>
+        <h3>License: <a href="https://opensource.org/licenses/MIT">MIT</a></h3>
         <h2>Overview</h2>
 <p><span class="label">The Problem</span>: For those times when you have to analyze a large amount of textual
 data, picking out the relevant line(s) of interest can be quite difficult.
