--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <a href="https://github.com/mike-mo">Mike Morante</a><br/>
                 <a href="https://github.com/cohen-uriel">Uriel Cohen</a><br/>
                 Vince Curley<br/>
-                Aleksey Kabanov
+                Aleksey Kabanov<br/>
+                Jenny Leung
             </p>
         </div>
         <h2>Summary</h2>
@@ -35,7 +36,7 @@
             Includes:
         </h3>
         <ul class="notes">
-            <li>Version <code>2018-01-03</code> for .NET 4+ (32- and 64-bit)</li>
+            <li>Version <code>2018-11-20</code> for .NET 4+ (32- and 64-bit)</li>
             <li>Version <code>2013-05-07</code> for .NET 2+ (32- and 64-bit)</li>
             <li>Version <code>2006-12-04</code> for .NET 1.1+ (32-bit only)</li>
             <li>Version <code>2001-12-28</code> for x86 (32-bit only)</li>
