Add Anton to contributors list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                 <a href="https://github.com/cohen-uriel">Uriel Cohen</a><br/>
                 Vince Curley<br/>
                 Aleksey Kabanov<br/>
-                Jenny Leung
+                Jenny Leung<br/>
+                Anton Polinger
             </p>
         </div>
         <h2>Summary</h2>
